--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
       </nav>
 
 <div class="contacto mt-5">
-    <div class="form ms-5">
+    <div class="form ">
 
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Nombre y apellido</label>
@@ -106,9 +106,9 @@
 <footer class="footer" >
     <div class="social_media">
 
-        <i class="fab fa-facebook fa-3x"></i>
-        <i class="fab fa-twitter fa-3x"></i>
-        <i class="fab fa-instagram-square fa-3x"></i>
+        <i class="fab fa-facebook "></i>
+        <i class="fab fa-twitter "></i>
+        <i class="fab fa-instagram-square "></i>
     </div>
     
     <div class="footer_text">
