--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
 
     <section class="section">
-      <div>
+      <div class="container-img">
         <img class="imagen" src="./img/Royal-Enfield-650-Cruiser.jpg" alt="" />
       </div>
       <div class="texto">
@@ -189,9 +189,9 @@
     <footer class="footer" >
         <div class="social_media">
 
-            <i class="fab fa-facebook fa-3x"></i>
-            <i class="fab fa-twitter fa-3x"></i>
-            <i class="fab fa-instagram-square fa-3x"></i>
+            <i class="fab fa-facebook "></i>
+            <i class="fab fa-twitter "></i>
+            <i class="fab fa-instagram-square "></i>
         </div>
         
         <div class="footer_text">
